--- a/partials/widget-medium.hbs
+++ b/partials/widget-medium.hbs
@@ -1,4 +1,4 @@
-<div class="widget" id="medium" style="display:none;">
+<div class="widget" style="background:white;" id="medium" style="display:none;">
   <div class ="content">
     <h3 class="title" style="margin-bottom:0;">Medium</h3>
     <div id="medium-widget"></div>
@@ -17,7 +17,7 @@ function createMediumCard(medium){
       "postsPerLine": 1,
       "limit": 3,
       "picture": "small",
-      "fields": ["description", "publishAt"],
+      "fields": ["description","claps"],
       "ratio": "square"
     }
   })
