--- a/src/less/author.less
+++ b/src/less/author.less
@@ -34,6 +34,14 @@
 			order:10;
 		}
 
+		#medium {
+			background:white;
+
+			.medium-widget-article__image img {
+				width: 80px;
+			}
+		}
+
 		.meetup {
 			order: 2;
 			padding: 0 12px;
