--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -314,6 +314,7 @@
 				border: 1px solid #d5dbe6 !important;
 				transition: all 0.3s all;
 				width: -webkit-fill-available;
+				width: -moz-fill-available;
 				margin-bottom: 0;
 				padding: 14px 15px;
 				border: 0;
@@ -388,6 +389,7 @@
 
 			button {
 				width: -webkit-fill-available !important;
+				width: -moz-fill-available !important;
 				background: linear-gradient(165deg,#40a2a2,#1f68a7);
 				box-shadow: 2px 2px 3px 0 #647498;
 				padding: 13px 20px;
@@ -706,9 +708,11 @@
 
 		.form-group {
 			width: -webkit-fill-available;
+			width: -moz-fill-available;
 
 			input {
 				width: -webkit-fill-available;
+				width: -moz-fill-available;
 			}
 		}
 
