fixes im finding way too late at night

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -648,7 +648,7 @@
       width: 110%;
       height: auto;
       background: #23232e;
-      content: "\f3b8" !important;
+      content: "Javascript" !important;
       color: white;
       display: block;
       font-style: normal;
