--- a/src/less/repos.less
+++ b/src/less/repos.less
@@ -39,6 +39,10 @@
   min-width: 32%;
   border-radius: 3px;
 
+  @media(max-width: 600px){
+    width: 100%;
+  }
+
    h3 {
     margin-top: 0;
     color: @color-github;
