--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -2,14 +2,19 @@
 <article class="{{post_class}} post-preview">
     {{#if feature_image}}
       <a href="{{url}}" class="featured-media" href="{{url}}">
-        <div class="post-card-image" style="background-image: url({{img_url feature_image}})"></div>
+        <div class="post-card-image" style="background-image: url({{img_url feature_image}})">
+          <div class="post-count">
+            {{#foreach tags visibility="internal" include="count.posts"}}
+              Post {{@number}} of {{count.posts}}
+            {{/foreach}}
+        </div>
+        </div></div>
       </a>
     {{/if}}
     <div class="details">
       <div class="post-head">
         <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
-        <span class="post-excerpt"  aria-hidden="true">{{#foreach tags visibility="internal" include="count.posts"}}{{meta_title}}:{{/foreach}} Post {{@number}}</span>
-        <span class="post-count">{{excerpt words="40"}}</span>
+        <span class="post-excerpt">{{excerpt words="40"}}</span>
     </div>
       <div class="post-permalink">
         <div class="meta">
