--- a/series.hbs
+++ b/series.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
-
+{{#tag}}
 <section class="content-wrap series-template {{body_class}}">
 	<div class="container">
 			<!-- end main post area -->
@@ -26,5 +26,5 @@
 				</div>
 	</div>
 </section>
-
+{{/tag}}
 <!-- end site's main content area -->
