fixes im finding way too late at night

--- a/src/less/series.less
+++ b/src/less/series.less
@@ -56,11 +56,21 @@
       margin: 0;
       height: auto;
       width: auto;
+      position: relative;
 
       @media(max-width: 600px) {
         max-width: 115px;
         height: 100% !important;
       }
+    }
+
+    .post-count {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding:10px;
+      background: teal;
+      color: black;
     }
 
 
