fixes im finding way too late at night

--- a/src/less/series.less
+++ b/src/less/series.less
@@ -64,7 +64,7 @@
       }
     }
 
-    .post-count {
+    .series-post-count {
       position: absolute;
       top: 0;
       left: 0;
@@ -98,8 +98,7 @@
           }
         }
 
-        .post-excerpt,
-        .post-count {
+        .post-excerpt {
           display: block;
         }
 
