--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -3,10 +3,8 @@
     {{#if feature_image}}
       <a href="{{url}}" class="featured-media" href="{{url}}">
         <div class="post-card-image" style="background-image: url({{img_url feature_image}})">
-          <div class="post-count">
-            {{#foreach tags visibility="internal" include="count.posts"}}
-              Post {{@number}} of {{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}
-            {{/foreach}}
+          <div class="series-post-count">
+            Post {{@number}}
         </div>
         </div></div>
       </a>
