fixes im finding way too late at night

--- a/src/less/series.less
+++ b/src/less/series.less
@@ -75,7 +75,7 @@
 
 
     .details {
-      min-width: -webkit-fill-available;
+      width: -webkit-fill-available;
       padding: 20px;
 
       .post-head {
