fixes im finding way too late at night

--- a/src/less/series.less
+++ b/src/less/series.less
@@ -64,13 +64,19 @@
       }
     }
 
+    .mobile-name {
+      display:none;
+    }
+
     .series-post-count {
       position: absolute;
       top: 0;
       left: 0;
-      padding:10px;
-      background: teal;
-      color: black;
+      padding: 10px;
+      background: #1ab1d4;
+      color: #fff;
+      font-family: 'CompassSans-Medium';
+      box-shadow: 1px 1px 1px rgba(67, 67, 84, .9);
     }
 
 
