fixes im finding way too late at night

--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -23,7 +23,7 @@
           {{#unless profile_image}}
             <a href="{{url}}" class="meta-item author"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
             <a href="{{url}}" class="author-mobile"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i></a>
-            <div class="info"><span>{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div>
+            <!--<div class="info"><span>{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div>-->
             </a>
           {{/unless}}
           {{#if profile_image}}
