--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -29,7 +29,7 @@
           {{#if profile_image}}
             <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{name}}</span></a>
             <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="Author image" class="avi" /></a>
-            <div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div>
+            <div class="info"><span class="mobile-name">{{slug}}</span><!--<span class="mobile-date">{{date format="MMM DD"}}</span>--></div>
           {{/if}}
         {{/primary_author}}
         <span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM DD"}}</span></span>
