fixed signup error

--- a/partials/signup2.hbs
+++ b/partials/signup2.hbs
@@ -35,12 +35,12 @@
     $('#signup-subscription').css('opacity', 0);
     $('#signup-subscription').css('position', 'absolute');
     $('#signup-form').ajaxForm({
-      beforeSubmit: validate
+      //beforeSubmit: validate
     });
 
-  var sub = $('#signup-subscription').is(":checked");
+  /*var sub = $('#signup-subscription').is(":checked");
       if (sub) {
         return false;
       }
-    });
+    });*/
 </script>
