--- a/partials/featuredpostpreview.hbs
+++ b/partials/featuredpostpreview.hbs
@@ -7,13 +7,8 @@
 
   {{#if feature_image}}
     <div class="featured-media">
-<<<<<<< HEAD
       <a href="{{url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{img_url feature_image absolute="true"}}" alt="{{{title}}}"></a>
-      {{!-- div class="postimage" style="background:url(https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{img_url feature_image absolute="true"}});" alt="{{{title}}}"></div> --}}
-=======
-      <a href="{{url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544204393/images{{feature_image}}" alt="{{{title}}}"></a>
-      {{!-- div class="postimage" style="background:url({{feature_image}});" alt="{{{title}}}"></div> --}}
->>>>>>> 22d3acaba88a6c4ea30a4447caddafc62632d5fd
+      <<!--div class="postimage" style="background:url(https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{img_url feature_image absolute="true"}});" alt="{{{title}}}"></div>-->
     </div>
   {{/if}}
 
