--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -1,4 +1,4 @@
-{{!< default}}
+npm install ghost-cli -g{{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
 <section class="content-wrap archive">
