made pages not #posts

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -5,7 +5,7 @@ npm install ghost-cli -g{{!< default}}
 	{{> postheader}}
 	<div class="container">
 		<!-- start post -->
-		{{#post}}
+		{{#page}}
 
 			<div class="main-content">
 				{{#if feature_image}}
@@ -139,7 +139,7 @@ npm install ghost-cli -g{{!< default}}
 				{{!--{{> repos}}--}}
 			</div>
 			{{> kanban}}
-		{{/post}}
+		{{/page}}
 	</div>
 	<!-- end main post area -->
 </section>
