--- a/post.hbs
+++ b/post.hbs
@@ -3,7 +3,7 @@
 <!-- start site's main content area -->
 <section class="content-wrap">
 	<div class="container">
-			{{#post}}
+			{{#page}}
 				<!-- start main post area -->
 				<div class=" main-content">
 					<!-- start post -->
