--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -10,7 +10,7 @@
 			{{> sidebar}}
 			<div class=" main-content">
 				<!-- start post -->
-				{{#post}}
+				{{#page}}
 					<article class="{{post_class}}">
 						{{#if feature_image}}
 							<div class="featured-media" style="background-image: url({{feature_image}});">
@@ -29,7 +29,7 @@
  					</div>
 
 					</article>
-				{{/post}}
+				{{/page}}
 				<!-- end post -->
 			</div>
 			<!-- end main post area -->
