--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -415,23 +415,23 @@
 	.series {
 
 		.pandas {
-			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/panda-icon.png');
+			background:url('https://cdn.hackersandslackers.com/images/11/panda-icon.png');
 		}
 
 		.codesnippetcorner {
-			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/python-icon.png');
+			background:url('https://cdn.hackersandslackers.com/images/11/python-icon.png');
 		}
 
 		.mysql {
-			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/dolphin-icon.png');
+			background:url('https://cdn.hackersandslackers.com/images/11/dolphin-icon.png');
 		}
 
 		.flask {
-			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/flask-icon.png')
+			background:url('https://cdn.hackersandslackers.com/images/11/flask-icon.png')
 		}
 
 		.aws-api {
-			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png')
+			background:url('https://cdn.hackersandslackers.com/images/11/api-icon.png')
 		}
 
 		.series-image {
