--- a/partials/postheader.hbs
+++ b/partials/postheader.hbs
@@ -2,8 +2,8 @@
 <header class="post-navbar" style="overflow:hidden">
 	<!-- start logo -->
 	<div class="navcontain">
-		<a class="logo" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{@blog.logo}}"></a>
-		<a class="mobile-branding" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/logowhite.png"></a>
+		<a class="logo" href="{{@blog.url}}"><img src="{{@blog.logo}}"></a>
+		<a class="mobile-branding" href="{{@blog.url}}"><img src="logowhite.png"></a>
 		<!-- start navigation -->
 		<nav class="post-navigation">
 			{{navigation}}
