--- a/partials/seocard.hbs
+++ b/partials/seocard.hbs
@@ -12,7 +12,7 @@
   },
   "headline": "{{{title}}}",
   "image": [
-    "{{@blog.url}}https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{img_url feature_image absolute="true"}}",
+    "{{@blog.url}}{{img_url feature_image absolute="true"}}",
     "{{@blog.url}}{{@blog.cover_image}}"
    ],
   "datePublished": "{{date published_at format="MMMM DD, YYYY"}}",
