--- a/default.hbs
+++ b/default.hbs
@@ -19,9 +19,9 @@
 	{{> mongodb}}
 
 	{{#is "post"}}
-		<meta property="og:image" content="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544204393/images{{img_url feature_image}}">
+		<meta property="og:image" content="{{img_url feature_image}}">
 	{{else}}
-		<meta property="og:image" content="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544204393/images{{@blog.cover_image}}"/>
+		<meta property="og:image" content="{{@blog.cover_image}}"/>
 	{{/is}}
 	{{> config}}
 	{{> analytics}}
