--- a/partials/author-card.hbs
+++ b/partials/author-card.hbs
@@ -2,7 +2,7 @@
 
 <div class="author-card-small {{slug}}">
   {{#if cover_image}}
-  <div class="author-cover" style="background:url(https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{cover_image}})">
+  <div class="author-cover" style="background:url({{cover_image}})">
   </div>
   {{else}}
   <div class="author-cover">
@@ -12,7 +12,7 @@
   {{#if profile_image}}
     <a href="{{url}}" class="avatar-link"><img src="{{img_url profile_image}}" alt="Author image" class="avatar"></a>
   {{else}}
-    <a href="{{url}}" class="avatar-link"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{asset "default-user-image.jpg"}}" alt="Author image" class="avatar"></a>
+    <a href="{{url}}" class="avatar-link"><img src="{{asset "default-user-image.jpg"}}" alt="Author image" class="avatar"></a>
   {{/if}}
   <div class="details">
     <div class="author">
