--- a/partials/widget-author.hbs
+++ b/partials/widget-author.hbs
@@ -5,7 +5,7 @@
     {{#if profile_image}}
       <a href="{{url}}"><img src="{{img_url profile_image}}" alt="Author image" class="avatar pull-left"></a>
     {{else}}
-      <a href="{{url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{asset "images/default-user-image.jpg"}}" alt="Author image" class="avatar pull-left"></a>
+      <a href="{{url}}"><img src="{{asset "images/default-user-image.jpg"}}" alt="Author image" class="avatar pull-left"></a>
     {{/if}}
     <div class="details">
       <div class="author">
