--- a/partials/widget-series.hbs
+++ b/partials/widget-series.hbs
@@ -6,7 +6,7 @@
     {{#foreach tags}}
 
       <div class="recent-single-post">
-				<div class="series-image" style="background:url(https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{img_url feature_image absolute="true"}})"></div>
+				<div class="series-image" style="background:url({{img_url feature_image}})"></div>
 				<div class="series-info">
         <a href="{{url}}" class="post-title">{{meta_title}}</a>
         {{!--<span class="count">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>--}}
