--- a/post.hbs
+++ b/post.hbs
@@ -36,8 +36,8 @@
 										<a href="{{url}}" class="meta-item author mobile"><i class="fas fa-user" style="width:13px; display:inline-block; margin-right:10px;"></i><span>{{slug}}</span></a>
 									{{/unless}}
 									{{#if profile_image}}
-										<a href="{{url}}" class="meta-item author desktop"><img src="https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="Author image" class="avi"><span>{{name}}</span></a>
-										<a href="{{url}}" class="meta-item author mobile"><img src="https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="Author image" class="avi"><span>{{slug}}</span></a>
+										<a href="{{url}}" class="meta-item author desktop"><img src="{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="Author image" class="avi"><span>{{name}}</span></a>
+										<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="Author image" class="avi"><span>{{slug}}</span></a>
 									{{/if}}
 								{{/primary_author}}
 								<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM Do"}}</span></span>
