--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -1,4 +1,4 @@
-npm install ghost-cli -g{{!< default}}
+{{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
 <section class="content-wrap archive">
@@ -56,7 +56,7 @@ npm install ghost-cli -g{{!< default}}
 						</span>
 					</a>
 
-					<a href="https://github.com/toddbirchard/Link-Preview-API" class="github-card" data-github="toddbirchard/Link-Preview-API">
+					<a href="https://github.com/toddbirchard/linkbox" class="github-card" data-github="toddbirchard/linkbox">
 						<h3 class="repo-title">Link-Preview-API</h3>
 						<p class="repo-description">Generates a JSON object containing link preview information by passing a URL parameter.</p>
 						<span class="github-card__meta">
