--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -5,7 +5,7 @@
 	{{> postheader}}
 	<div class="container">
 		<!-- start post -->
-		{{#page}}
+		{{#post}}
 
 			<div class="main-content">
 				{{#if feature_image}}
@@ -139,7 +139,7 @@
 				{{!--{{> repos}}--}}
 			</div>
 			{{> kanban}}
-		{{/page}}
+		{{/post}}
 	</div>
 	<!-- end main post area -->
 </section>
