--- a/series.hbs
+++ b/series.hbs
@@ -8,7 +8,7 @@
 			{{> sidebar}}
 				<!-- start main post area -->
 				<div class=" main-content">
-					{{#page}}
+					{{#post}}
 					<div class="postlist">
 						{{> cover-tag}}
 						<div class="sort-container">
@@ -22,7 +22,7 @@
 							{{pagination}}
 						</div>
 						</div>
-						{{/page}}
+						{{/post}}
 					</div>
 </section>
 <!-- end site's main content area -->
