--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -22,8 +22,8 @@
 							{{content}}
 						</div>
 						<div class="tag-container">
-							{{#get "tags" filter="visibility:internal" include="count.posts,meta_title" order="count.posts desc" }}
-								{{#foreach tags}}
+							{{#get "tags" include="count.posts,meta_title" order="count.posts desc" }}
+								{{#foreach tags visibility="internal"}}
 									<div class="tag-wrapper">
 										<a href="{{url}}">
 											<div class="img-wrapper {{#unless feature_image}}no-image{{/unless}}" style="background-image: url({{img_url feature_image}})"></div>
