--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -22,11 +22,11 @@
 							{{content}}
 						</div>
 						<div class="tag-container">
-							{{#get "tags" include="count.posts,meta_title" order="count.posts desc" }}
+							{{#get "tags" filter="feature_image:-null" include="count.posts,meta_title" order="count.posts desc" limit="all"}}
 								{{#foreach tags visibility="internal"}}
 									<div class="tag-wrapper">
 										<a href="{{url}}">
-											<div class="img-wrapper {{#unless feature_image}}no-image{{/unless}}" style="background-image: url({{img_url feature_image}})"></div>
+											<div class="img-wrapper" style="background-image: url({{img_url feature_image}})"></div>
 											<div class="description">
 												<h2>{{meta_title}}</h2>
 												<p>{{description}}</p>
