--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -23,9 +23,9 @@
 						</div>
 						<div class="tag-container">
 							{{#get "tags" filter="feature_image:-null" include="count.posts,meta_title" order="count.posts desc" limit="all"}}
-								{{#foreach tags visibility="internal"}}
+								{{#foreach tags}}
 									<div class="tag-wrapper">
-										<a href="{{url}}">
+										<a href="{{url}}" title="{{name}}">
 											<div class="img-wrapper" style="background-image: url({{img_url feature_image}})"></div>
 											<div class="description">
 												<h2>{{meta_title}}</h2>
