--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -37,7 +37,7 @@
     @media(max-width: 1040px) {
       margin: 0 10px 30px;
     }
-    @media(max-width: 800px) {
+    @media(max-width: 900px) {
       margin: 0 30px 30px;
     }
 
@@ -130,6 +130,28 @@
       @media(max-width: 600px) {
         font-size: 3em;
       }
+
+      .post-content {
+        @media(max-width: 900px) {
+          margin: 25px 50px 0;
+        }
+      }
+
+      .page-title{
+        @media(max-width: 900px) {
+          margin: 40px 50px 0;
+        }
+      }
+
+      .container{
+        @media(max-width: 900px) {
+          width:90% !important;
+        }
+
+        @media(max-width: 600px) {
+          width:100% !important;
+        }
+      }
     }
 
     p {
@@ -175,8 +197,8 @@
     align-content: flex-start;
     flex-flow: row wrap;
     margin: 30px 40px 10px;
-    @media(max-width: 900px) {
-      margin: 30px 20px 20px;
+    @media(max-width: 800px) {
+      margin: 30px 50px 20px;
     }
 
     .tag-wrapper {
