--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -142,7 +142,12 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-            margin-top: 10px;
+        margin-top: 15px;
+
+        span {
+          height: fit-content;
+          line-height: 1;
+        }
       }
 
       &.b {
