--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -17,6 +17,10 @@
     flex-direction: row;
     flex-wrap: wrap;
 
+    @mecia(max-width: 800px) {
+
+    }
+
     .series-cover {
       background-size: cover;
       background-position-y: center;
@@ -105,7 +109,7 @@
   }
   @media(max-width: 800px) {
     padding: 0;
-    margin: 6%;
+    margin: 0 6%;
     width: 88%;
   }
 
