--- a/src/less/repos.less
+++ b/src/less/repos.less
@@ -9,12 +9,13 @@
   flex-wrap: wrap;
   width: 100%;
   color: white;
+  justify-content: space-between;
 }
 
 .repo-title {
   font-family: 'CompassSans-Regular',serif;
   font-size: 18px !important;
-  font-weight: 500;
+  font-weight: 600;
 
   &:hover {
     color: white;
@@ -36,7 +37,7 @@
   text-decoration: none;
   font-size: 13px;
   flex: 1;
-  min-width: 32%;
+  max-width: 32%;
   border-radius: 3px;
 
   @media(max-width: 600px){
@@ -53,12 +54,10 @@
     }
   }
 
-
-
   &:hover {
     background: #1fc1c1;
 
-    p {
+    * {
       color: white;
     }
   }
