--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -304,13 +304,13 @@
           }
         }
 
-        span {
+        .postcount {
           font-size: 0.8em;
           line-height: 1.5;
           color: #37363F;
           text-algin: right;
-          position: absolute;
-          bottom: 15px;
+          line-height: 1.5;
+          margin-top: 20px;
         }
       }
     }
@@ -332,4 +332,8 @@
       padding: 3px 30px 20px;
       width: auto;
     }
+
+    h3 {
+       font-weight: 500;
+        }
   }
