--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,6 +1,6 @@
 <!-- scripts -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
+<script src="{{asset "/js/includes/tween-lite.js"}}"></script>
 {{#is "post"}}
   <script src="{{asset "/js/includes/scrollbooster.min.js"}}"></script>
   <script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
@@ -11,4 +11,4 @@
 {{/is}}
 
 <script src="{{asset "/js/main.min.js"}}"></script>
-<script src="https://cdn.jsdelivr.net/npm/ghost-search@0.1.0/dist/ghost-search.min.js"></script>
+<script src="{{asset "/js/includes/ghost-search.js"}}"></script>
