small style fixes

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -57,7 +57,7 @@
 					</a>
 
 					<a href="https://github.com/toddbirchard/linkbox" class="github-card" data-github="toddbirchard/linkbox">
-						<h3 class="repo-title">Link-Preview-API</h3>
+						<h3 class="repo-title">linkbox</h3>
 						<p class="repo-description">Generates a JSON object containing link preview information by passing a URL parameter.</p>
 						<span class="github-card__meta">
 							<span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
