--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -378,16 +378,16 @@
 	}
 
 	.btn {
-		font-size: 16px;
-		font-family: 'CompassSans-Medium',serif;
-		text-transform: uppercase;
-		padding: 14px 20px;
-		line-height: 1;
-		height: 14px;
-		font-weight: 600;
-		background: @button-color;
-		border-bottom: 1px solid #009c83;
+		height: 17px;
+		padding: 14px 24px;
 		border-right: 2px solid #009c83;
+		border-bottom: 1px solid #009c83;
+		background: linear-gradient(135deg,#4fc388,#21b6b7);
+		font-family: 'CompassSans-Medium',serif;
+		font-size: 18px;
+		font-weight: 600;
+		line-height: 1;
+		text-transform: uppercase;
 		transition: all .3s ease-out;
 
 		&:hover {
