--- a/src/less/repos.less
+++ b/src/less/repos.less
@@ -15,7 +15,7 @@
 .repo-title {
   font-family: 'CompassSans-Regular',serif;
   font-size: 18px !important;
-  font-weight: 600;
+  font-weight: 600 !important;
 
   &:hover {
     color: white;
@@ -32,7 +32,7 @@
   box-sizing: border-box;
   border: 1px solid @gray;
   margin: 10px 0;
-  padding: @spacing;
+  padding: 15px;
   color: @text;
   text-decoration: none;
   font-size: 13px;
