small style fixes

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -6,6 +6,10 @@
 	/*====================================================
 		main post area
 	====================================================*/
+
+	section {
+	 width: fit-content;
+	}
 	.container {
 		padding: 0;
 		max-width: 1000px !important;
