--- a/src/less/series.less
+++ b/src/less/series.less
@@ -96,7 +96,7 @@
         .post-title {
           font-size: 1.5em!important;
           font-weight: 900;
-          width: 379px;
+          width: 95%;
           margin: 0 0 15px;
           @media(max-width: 600px) {
             width: -webkit-fill-available;
@@ -105,7 +105,14 @@
         }
 
         .post-excerpt {
+          color: #153b52;
+          font-family: 'HackerSans-Regular','CompassSans-Regular',serif;
+          font-size: 1em;
+          font-weight: 100;
+          line-height: 1.21;
+          text-align: left;
           display: block;
+          white-space: pre-wrap;
         }
 
         .postcount {
