--- a/src/less/global.less
+++ b/src/less/global.less
@@ -20,6 +20,12 @@ html {
 	overflow-x: hidden;
 }
 
+header {
+	@media(max-width: 600px){
+		margin-bottom: 20px !important;
+	}
+}
+
 article {
 
 	p {
