--- a/src/less/post.less
+++ b/src/less/post.less
@@ -9,6 +9,9 @@
 
 	section {
 	 width: fit-content;
+	 @media(max-width: 800px) {
+		 width: 100% !important;
+	 }
 	}
 	.container {
 		padding: 0;
