--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -48,6 +48,10 @@
 			width: -webkit-fill-available;
 			max-width: none;
 		}
+		
+		@media(max-width: 600px){
+			margin-top: 30px !important;
+		}
 
 		.form-group {
 			padding: 0;
