--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -200,6 +200,11 @@
     @media(max-width: 800px) {
       margin: 30px 50px 20px;
     }
+    @media(max-width: 600px) {
+      margin: 30px 30px 20px;
+    }
+
+
 
     .tag-wrapper {
       background: #15475a;
