--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -201,7 +201,7 @@
       margin: 30px 50px 20px;
     }
     @media(max-width: 600px) {
-      margin: 30px 30px 20px;
+      margin: 30px 30px;
     }
 
 
@@ -305,7 +305,8 @@
           min-height: 80px;
 
           @media(max-width: 600px){
-            margin:10px 0 5px
+            margin:10px 0 5px;
+            min-height: none;
           }
         }
 
@@ -315,7 +316,7 @@
           color: #37363F;
           text-algin: right;
           line-height: 1.5;
-          margin-top: 20px;
+          margin-top: 10px;
         }
       }
     }
