--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -211,16 +211,18 @@
       width: 48%;
       margin: 0 0 20px;
       border: 1px solid #dadada;
-      height: fit-content;
       transition: all 0.3s ease-out;
-      height: -webkit-fit-content !important;
+      display: flex;
       @media(max-width: 900px) {
-        width: 100%;
         margin: 0 0 25px;
 
         &:last-of-type {
           margin-bottom: 0;
         }
+      }
+
+      @media(max-width: 600px) {
+        width: 100%;
       }
 
       &:hover {
@@ -302,11 +304,13 @@
           text-align: left;
           font-weight: 100;
           font-family: CompassSans-Regular;
-          min-height: 80px;
+          flex-grow: 1;
+          flex-shrink: 0;
+          flex-basis: auto;
 
           @media(max-width: 600px){
             margin:10px 0 5px;
-            min-height: none;
+            min-height: 0;
           }
         }
 
