--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -283,9 +283,8 @@
         display: -ms-flexbox;
         display: flex;
         align-items: left;
-        height: fit-content;
+        height: -webkit-fill-available;
         flex-direction: column;
-        min-height: 115px;
 
         h2 {
           color: #37363e;
