--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -283,7 +283,7 @@
         display: -ms-flexbox;
         display: flex;
         align-items: left;
-        height: -webkit-fill-available;
+        height: auto;
         flex-direction: column;
 
         h2 {
