--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -207,7 +207,7 @@
 
 
     .tag-wrapper {
-      background: #15475a;
+      background: #f4fcff;
       width: 48%;
       margin: 0 0 20px;
       border: 1px solid #dadada;
@@ -283,7 +283,6 @@
         display: -ms-flexbox;
         display: flex;
         align-items: left;
-        height: auto;
         flex-direction: column;
 
         h2 {
@@ -292,7 +291,7 @@
           line-height: 1.2;
           margin: 0;
           font-weight: 600;
-          font-family: CompassSans-Regular;
+          font-family: 'CompassSans-Regular';
         }
 
         p {
@@ -302,7 +301,7 @@
           line-height: 1.5;
           text-align: left;
           font-weight: 100;
-          font-family: CompassSans-Regular;
+          font-family: 'CompassSans-Regular';
           flex-grow: 1;
           flex-shrink: 0;
           flex-basis: auto;
