--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -279,11 +279,12 @@
         color: #162c52;
         font-family: CompassSans-Medium,CompassSans-Light;
         width: auto;
-        display: -webkit-box;
-        display: -ms-flexbox;
         display: flex;
         align-items: left;
         flex-direction: column;
+        flex-basis: auto;
+        flex-grow: 1;
+        flex-shrink: 0;
 
         h2 {
           color: #37363e;
