--- a/partials/signup2.hbs
+++ b/partials/signup2.hbs
@@ -27,7 +27,7 @@ function createAccount(){
   <p class="text_max un" style="visibility: hidden;">Step up your shitposting game.</p>
 
 
-  <form id="signup-form" action="createAccount()" method="POST" class="signup-form un" style="visibility:hidden;">
+  <form id="signup-form" onsubmit="createAccount()" class="signup-form un" style="visibility:hidden;">
     <input id="signup-username" type="text" name="username" placeholder="username" required>
     <input id="signup-email" type="email" name="email" autocomplete="email" placeholder="youremail@example.com" required>
     <input id="signup-gravatar" type="text" name="gravatar" visibility="hidden">
