--- a/partials/signup2.hbs
+++ b/partials/signup2.hbs
@@ -28,7 +28,7 @@ function createAccount(){
 
 
   <form id="signup-form" onsubmit="createAccount()" class="signup-form un" style="visibility:hidden;">
-    <input id="signup-username" type="text" name="username" placeholder="username" required>
+    <!--<input id="signup-username" type="text" name="username" placeholder="username" required>-->
     <input id="signup-email" type="email" name="email" autocomplete="email" placeholder="youremail@example.com" required>
     <input id="signup-gravatar" type="text" name="gravatar" visibility="hidden">
     <!--<input id="signup-subscription" type="checkbox" name="subscribe">-->
