--- a/src/less/code.less
+++ b/src/less/code.less
@@ -647,7 +647,7 @@
       margin-left: -40px;
       width: 110%;
       height: auto;
-      background: #23232e;
+      background: #1a1a23;
       content: "Javascript" !important;
       color: white;
       display: block;
