--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,6 +1,6 @@
 <!-- scripts -->
 
-<script src="{{asset "/js/includes/tween-lite.js"}}"></script>
+<script src="{{asset "/js/includes/TweenMax-1-18-0.min.js"}}"></script>
 {{#is "post"}}
   <script src="{{asset "/js/includes/scrollbooster.min.js"}}"></script>
   <script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
