separated signup logic

--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -119,6 +119,7 @@
 			a {
 				color: @text-color-heading;
 				transition: all 0.2s ease-out;
+				font-family: 'HackerSans-Medium','CompassSans-Light',sans-serif;
 
 				&:hover {
 					color: @secondary-color;
